dark mode icon fix

--- a/src/App.css
+++ b/src/App.css
@@ -187,7 +187,6 @@
 
 .light-icon {
   margin-top: 4px;
-  color: black;
 }
 
 .dark .light-icon-wrapper {
